dnl Autoconf configure script for MicroEMACS.
dnl Process this file with autoconf to produce a configure script.

AC_INIT(display.c)
AC_PROG_CC
AC_CANONICAL_SYSTEM
AC_CONFIG_HEADER(config.h)
AC_CHECK_HEADERS(unistd.h)

CFLAGS_DEBUG=-g
CFLAGS_OPTIMIZE=-O

EXTRA_OBJS=""
case "${host}" in
*hpux*)		DEFINES="$DEFINES -DHPUX"; ;;
x86_64*linux*)	DEFINES="$DEFINES -DLINUX";
		LDFLAGS="-L/usr/lib64/termcap" ;;
*linux*)	DEFINES="$DEFINES -DLINUX" ;;
*solaris*)	DEFINES="$DEFINES -DSOLARIS"; EXTRA_OBJS=bcopy.o;
                bcopy=bcopy.s ;;
*)		DEFINES="$DEFINES -DUNKNOWN" ;;
esac
echo host is ${host}

dnl Hard-code the system and tty directories for now; eventually
dnl we might have different ones depending on target platform.
AC_ARG_WITH(linux,
[  --with-linux            Use Linux-specific instead of generic UNIX I/O],
[sysdir=sys/linux],
[sysdir=sys/unix])

AC_ARG_WITH(termcap,
[  --with-termcap          Use termcap instead of ncurses for screen I/O],
[ttydir=tty/termcap
LIBS="-ltermcap"],
[ttydir=tty/ncurses
LIBS="-lncurses"])

# Set the default compiler switches based on the --enable-debug option

AC_ARG_ENABLE(debug,
[  --enable-debug          Build with debugging symbols],
[CFLAGS_DEFAULT=CFLAGS_DEBUG],
[CFLAGS_DEFAULT=CFLAGS_OPTIMIZE])

AC_SUBST(sysdir)
AC_SUBST(ttydir)
AC_SUBST(DEFINES)
AC_SUBST(EXTRA_OBJS)
AC_SUBST(LIBS)
AC_SUBST(CFLAGS_DEBUG)
AC_SUBST(CFLAGS_DEFAULT)
AC_SUBST(CFLAGS_OPTIMIZE)

AC_OUTPUT(Makefile)
